Added storage of restaurants dataset

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 dataset/yelp_academic_dataset_review.json
 dataset/yelp_academic_dataset_user.json
+dataset/yelp_academic_dataset_review_restaurants.json
 
 .idea
 
