--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 dataset/yelp_academic_dataset_review.json
-dataset/yelp_academic_dataset_user.json
-dataset/yelp_academic_dataset_review_restaurants.json
-dataset/annotations_dataset.json
+pre-processing/dataset/*
+processing/dataset/*
+recommender/dataset/*
 .DS_Store
 .idea
 
